--- a/BOAgent/requirements.txt
+++ b/BOAgent/requirements.txt
@@ -6,4 +6,4 @@ torch>=1.11.0
 scikit-learn>=1.0.0
 numpy>=1.21.0
 
-set OPENAI_API_KEY=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
+set OPENAI_API_KEY=“your openai api key”
